<resources>
    <string name="app_name">FeiYu</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="introduct_activity_login">欢迎来到飞鱼之家！ 立即</string>
    <string name="register_activity_login">注册</string>
    <string name="password_activity_login">请输入密码</string>
    <string name="phone_activity_login">请输入手机号</string>
    <string name="forgot_activity_login">忘记密码？</string>
    <!--register-->
    <string name="introduct_activity_register">已有账号，立即</string>
    <string name="verify_activity_register">获取验证码</string>
    <string name="verify_activity_login">请输入验证码</string>
    <string name="show_activity_register">注册即代表同意：</string>
    <string name="show_feiyu_activity_register">《飞鱼旅行用户协议》</string>

    <!--home-->
    <string name="text_home">首页</string>
    <string name="text_road">行程</string>
    <string name="text_publish">发布</string>
    <string name="text_msg">消息</string>
    <string name="text_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
