<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.user.LoginActivity">

    <TextView
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:text="@string/title_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingTop="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/introduct_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="4sp"
            android:textSize="16sp"
            android:id="@+id/tv_login_register"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/register_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:background="@null"
            android:hint="@string/phone_activity_login"
            android:id="@+id/et_phone"
            android:singleLine="true"
            android:ellipsize="end"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:layout_height="0.5dp"/>

        <EditText
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/password_activity_login"
            android:singleLine="true"
            android:ellipsize="end"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:layout_height="0.5dp"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/tv_forgot"
        android:layout_gravity="end"
        android:text="@string/forgot_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_login"
        android:layout_marginTop="50dp"
        android:text="@string/title_activity_login"
        android:layout_gravity="center_horizontal"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"/>

</LinearLayout>